--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,37 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 build_flags = -D MOBILE=1
-lib_deps = h2zero/NimBLE-Arduino@^2.3.6
+lib_deps = 
+	h2zero/NimBLE-Arduino@^2.3.6
+	knolleary/PubSubClient@^2.8
+upload_port = //dev/cu.usbserial-21410
 
-[env:esp32_static]
+[env:esp32_static__1__]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-build_flags = -D STATIC=1
-lib_deps = h2zero/NimBLE-Arduino@^2.3.6
+build_flags = -D STATIC=1 -D ID="\"esp_1"\"
+lib_deps = 
+	h2zero/NimBLE-Arduino@^2.3.6
+	knolleary/PubSubClient@^2.8
+upload_port = /dev/cu.usbserial-2110
+
+[env:esp32_static__2__]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+build_flags = -D STATIC=1 -D ID="\"esp_2"\"
+lib_deps = 
+	h2zero/NimBLE-Arduino@^2.3.6
+	knolleary/PubSubClient@^2.8
+upload_port = /dev/cu.usbserial-2120
+
+[env:esp32_static__3__]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+build_flags = -D STATIC=1 -D ID="\"esp_3"\"
+lib_deps = 
+	h2zero/NimBLE-Arduino@^2.3.6
+	knolleary/PubSubClient@^2.8
+upload_port = /dev/cu.usbserial-2130
