--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 upload_port = //dev/cu.usbserial-21410
 
-[env:esp32_static__1__]
+[env:esp32_beacon__1__]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
@@ -28,7 +28,7 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 upload_port = /dev/cu.usbserial-2110
 
-[env:esp32_static__2__]
+[env:esp32_beacon__2__]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
@@ -38,7 +38,7 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 upload_port = /dev/cu.usbserial-2120
 
-[env:esp32_static__3__]
+[env:esp32_beacon__3__]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
