--- a/back/package.json
+++ b/back/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "aedes": "^0.51.3",
     "express": "^5.1.0",
-    "mqtt": "^5.14.1"
+    "mqtt": "^5.14.1",
+    "websocket-stream": "^5.5.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.5"
