oled screen management

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,8 @@ build_flags = -D MOBILE=1
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit GFX Library@^1.12.4
+	adafruit/Adafruit SSD1306@^2.5.15
 
 [env:esp32_beacon__1__]
 platform = espressif32
@@ -25,6 +27,8 @@ build_flags = -D STATIC=1 -D ID="\"esp_1"\"
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit GFX Library@^1.12.4
+	adafruit/Adafruit SSD1306@^2.5.15
 
 [env:esp32_beacon__2__]
 platform = espressif32
@@ -34,6 +38,8 @@ build_flags = -D STATIC=1 -D ID="\"esp_2"\"
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit GFX Library@^1.12.4
+	adafruit/Adafruit SSD1306@^2.5.15
 
 [env:esp32_beacon__3__]
 platform = espressif32
@@ -43,3 +49,5 @@ build_flags = -D STATIC=1 -D ID="\"esp_3"\"
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit GFX Library@^1.12.4
+	adafruit/Adafruit SSD1306@^2.5.15
