--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-build_flags = -D MOBILE=1
+build_flags = -D MOBILE=1 -D IP=20
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	knolleary/PubSubClient@^2.8
@@ -23,31 +23,40 @@ lib_deps =
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-build_flags = -D STATIC=1 -D ID="\"esp_1"\"
+build_flags = -D STATIC=1 -D ID="\"esp_1"\" -D IP=21
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	knolleary/PubSubClient@^2.8
 	adafruit/Adafruit GFX Library@^1.12.4
 	adafruit/Adafruit SSD1306@^2.5.15
+	esphome/ESPAsyncWebServer-esphome@^3.3.0
 
 [env:esp32_beacon__2__]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-build_flags = -D STATIC=1 -D ID="\"esp_2"\"
+build_flags = -D STATIC=1 -D ID="\"esp_2"\" -D IP=22
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	knolleary/PubSubClient@^2.8
 	adafruit/Adafruit GFX Library@^1.12.4
 	adafruit/Adafruit SSD1306@^2.5.15
+	esphome/ESPAsyncWebServer-esphome@^3.3.0
 
 [env:esp32_beacon__3__]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-build_flags = -D STATIC=1 -D ID="\"esp_3"\"
+build_flags = -D STATIC=1 -D ID="\"esp_3"\" -D IP=23
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	knolleary/PubSubClient@^2.8
 	adafruit/Adafruit GFX Library@^1.12.4
 	adafruit/Adafruit SSD1306@^2.5.15
+	esphome/ESPAsyncWebServer-esphome@^3.3.0
+
+[env:esp8266_AccessPoint]
+platform = espressif8266
+board = esp12e
+framework = arduino 
+build_flags = -D ACCESS_POINT=1
